# Vanish-Launcher

./: .env.example  README.md  docker-compose.yml
app/: index.html  package.json  tailwind.config.js  tauri.conf.json
app/src/: App.jsx  index.css  main.jsx
app/src/api/: axios.js
app/src/components/: Layout.jsx  ProtectedRoute.jsx  Sidebar.jsx  TopBar.jsx
app/src/pages/: Account.jsx  CheatLoader.jsx  Dashboard.jsx  Login.jsx  RedeemLicense.jsx  Settings.jsx
app/src/store/: index.js
backend/: Dockerfile  package.json
backend/prisma/: schema.prisma
backend/src/: index.js
backend/src/controllers/: authController.js  cheatController.js  licenseController.js
backend/src/middleware/: auth.js  rateLimiter.js
backend/src/routes/: auth.js  cheat.js  license.js
backend/src/services/: discordService.js  licenseService.js
backend/src/utils/: jwt.js
src-tauri/: Cargo.toml  tauri.conf.json
