[package]
name = "vanish-launcher"
version = "1.0.0"
description = "Vanish Launcher"
authors = ["Vanish Team"]
license = ""
repository = ""
default-run = "vanish-launcher"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-open", "fs-write-binary-file", "fs-read-file", "path-all", "window-close", "window-start-dragging"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
